<resources>
    <string name="app_name">NWeather</string>
    <string name="inputPlace">请输入地址</string>
    <string name="splitChar">|</string>
    <string name="lifeIndex">生活指数</string>
    <string name="cold">感冒</string>
    <string name="dressing">穿衣</string>
    <string name="ultraviolet">实时紫外线</string>
    <string name="carWashing">洗车</string>
    <string name="forecast">预报</string>


    <string name="temperature">%1$d °C</string>
    <string name="airQuality">空气指数 %1$d</string>
    <string name="temperatureRange">%1$d ~ %2$d °C</string>
</resources>